<resources>
    <string name="app_name">RockApp</string>
    <string name="title_home">Video URL</string>
    <string name="title_dashboard">MP3</string>
    <string name="title_videocam">Video</string>
    <string name="title_notifications">Radio</string>
    <string name="title_images">Images</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">VIDEO FRAGMENT</string>
    <string name="hello_mp3_fragment">MP3 FRAGMENT</string>
    <string name="hello_radio_fragment">RADIO FRAGMENT</string>
    <string name="hello_videocam_fragment">RADIO FRAGMENT</string>

    <string name="title_btn_rne1">RNE 1</string>
    <string name="title_btn_rne3">RNE 3</string>
    <string name="title_btn_rne5">RNE 5</string>

</resources>
