<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RadioFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/radiosList"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:weightSum="3">

            <Button
                android:id="@+id/btn_rne_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/title_btn_rne1" />

            <Button
                android:id="@+id/btn_rne_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/title_btn_rne3" />

            <Button
                android:id="@+id/btn_rne_5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/title_btn_rne5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_below="@id/radiosList"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="6">

            <ImageButton
                android:id="@+id/btn_pause"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ic_pause_24dp"/>


            <ImageButton
                android:id="@+id/btn_play"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ic_play_arrow_black_24dp"/>

            <ImageButton
                android:id="@+id/btn_stop"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ic_stop_black_24dp"/>

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>